<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_version">1.7.1</string>
	<string name="app_name">OTPdroid</string>
	<string name="author_">Author:</string>
	<string name="version_">Version:</string>
	<string name="license_">License:</string>
	<string name="author">Felix Bechstein &lt;f@ub0r.de&gt;\nSerguey Parkhomovsky &lt;www.squirrelium.com&gt;</string>
	<string name="license">BeerLicense 1.03 - see http://en.wikipedia.org/wiki/Beerware</string>
	<string name="source_">Sourcescode:</string>
	<string name="source">http://github.com/felixb/otpdroid</string>
	<string name="website_">Website:</string>
	<string name="website">http://code.google.com/p/ub0rapps/</string>
	<string name="about_">About OTPdroid</string>
	<string name="about">OTPdroid generates OTP passwords. Supporting MD5 and SHA1 hash methods. This is a fork of Opiekey http://android.f00d.nl/opiekey/ written by Daniel Tryba. He took some code from Harry Mantakos\'s jotp http://www.cs.umd.edu/~harry/jotp/</string>
	<string name="changelog_">Changelog</string>
	<string name="more_">More Apps..</string>
	<string name="settings">Preferences</string>
	
	<string name="passphrase_">Passphrase</string>
	<string name="passphrase_hint">your passphrase</string>
	<string name="challenge_">Challenge</string>
	<string name="method_promt">Hash method</string>
	<string name="sequence_hint">99</string>
	<string name="challenge_hint">alpha1</string>
	<string name="calculate_">Calculate</string>
	<string name="response_">Response</string>
	
	<string name="save_passphrase_">Remember passphrase</string>
	<string name="save_passphrase_hint">check to store passphrase (insecure!)</string>
	<string name="encrypt_by_boottime_">Encrypt with boottime</string>
	<string name="encrypt_by_boottime_hint">Encrypt passphrase with boottime. This makes saved passphrase unrestorable after reboot.</string>
	<string name="save_sequence_">Remember challenge</string>
	<string name="autodecrement_">Auto decrement sequence</string>
	<string name="autodecrement_hint">Auto decrement sequence on resume.</string>
	<string name="number_of_responses_">Number of responses</string>
	<string name="number_of_responses_hint">Number of responses to print.</string>
	<string name="show_time_">Show time</string>
	<string name="show_time_hint">Show time needed to generate output.</string>
	<string name="copy_response_">Copy response</string>
	<string name="copy_response_hint">Copy (first) response to clipboard.</string>
	
	<string name="error_input">Wrong input!</string>
	
	<string name="generated_in">Generated in </string>
	<string name="seconds">seconds.</string>
	
	<string-array name="hash_methods">
		<item>sha1</item>
		<item>md5</item>
	</string-array>
</resources>
