<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2010 Felix Bechstein
	-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference android:key="saveChallenge"
		android:title="@string/save_sequence_" />
	<CheckBoxPreference android:key="savePassphrase"
		android:title="@string/save_passphrase_" android:summary="@string/save_passphrase_hint" />
	<!--
	<CheckBoxPreference android:key="encryptByBoottime" android:dependency="savePassphrase"
		android:title="@string/encrypt_by_boottime_" android:summary="@string/encrypt_by_boottime_hint" />
	-->
	<CheckBoxPreference android:key="autoDecrement"
		android:title="@string/autodecrement_" android:summary="@string/autodecrement_hint" />
	<EditTextPreference android:key="numberOfResponses"
		android:title="@string/number_of_responses_" android:summary="@string/number_of_responses_hint" android:defaultValue="1"
		android:singleLine="true" android:inputType="number" />
</PreferenceScreen>
