<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2010 Felix Bechstein
	-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">

		<TextView android:text="@string/about" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingLeft="5dip"
			android:paddingRight="5dip" android:autoLink="web" />

		<TextView android:text="@string/license_"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:paddingTop="5dip" android:paddingLeft="5dip" />
		<TextView android:text="@string/license"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:paddingLeft="15dip" android:paddingRight="5dip"
			android:autoLink="web" />

		<TextView android:text="@string/author_"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:paddingTop="5dip" android:paddingLeft="5dip" />
		<TextView android:text="@string/author" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingLeft="15dip"
			android:paddingRight="5dip" android:autoLink="email|web" />

		<TextView android:text="@string/website_"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:paddingTop="5dip" android:paddingLeft="5dip" />
		<TextView android:text="@string/website"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:paddingLeft="15dip" android:paddingRight="5dip"
			android:autoLink="web" />

		<TextView android:text="@string/source_"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:paddingTop="5dip" android:paddingLeft="5dip" />
		<TextView android:text="@string/source" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingLeft="15dip"
			android:paddingRight="5dip" android:paddingBottom="5dip"
			android:autoLink="web" />
	</LinearLayout>
</ScrollView>
